<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:padding="@dimen/activity_horizontal_margin"
    android:fillViewport="true"
    tools:context="ngovanquan_803656.datn.activity.LoginActivity"
    android:id="@+id/scrollView">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:id="@+id/txt_tenSNV"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_marginTop="20dp"
            android:id="@+id/txt_tenCCVT"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_username"
                android:hint="@string/hint_username"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_password"
                android:hint="@string/hint_password"
                android:singleLine="true"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_login"
                android:text="@string/btn_login"
                android:background="@drawable/design_button"
                android:textColor="@color/white"
                android:layout_marginRight="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:text="@string/btn_cancel"
                android:background="@drawable/design_button"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>





</ScrollView>
