<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quản lý Cơ quan lưu trữ"
            android:textColor="@color/text_color"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Mã CQLT:"
                    android:layout_weight="0.3"
                    android:textStyle="bold"/>
                <EditText android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="Mã cơ quan lưu trữ ..."
                    android:id="@+id/txt_MaCQLT"/>
                <Button android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_check"
                    android:layout_weight="0.2"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Tên CQLT:"
                    android:layout_weight="0.3"
                    android:textStyle="bold"/>
                <EditText android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="Tên cơ quan lưu trữ ..."
                    android:id="@+id/txt_TenCQLT" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Địa chỉ:"
                    android:layout_weight="0.3"
                    android:textStyle="bold"/>
                <EditText android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="Địa chỉ ..."
                    android:id="@+id/txt_DiaChi"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Số điện thoại:"
                    android:layout_weight="0.3"
                    android:textStyle="bold"/>
                <EditText android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:inputType="number"
                    android:hint="Số điện thoại ..."
                    android:id="@+id/txt_SDT"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Email:"
                    android:layout_weight="0.3"
                    android:textStyle="bold"/>
                <EditText android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="Email ..."
                    android:id="@+id/txt_Email"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Website:"
                    android:layout_weight="0.3"
                    android:textStyle="bold"/>
                <EditText android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:hint="Website ..."
                    android:id="@+id/txt_Website"/>
            </TableRow>
        </TableLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btn_addnew"
                android:id="@+id/btn_AddNew"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btn_update"
                android:id="@+id/btn_Update"
                android:visibility="gone"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/btn_cancel"
                android:id="@+id/btn_Cancel"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:id="@+id/txt_SearchValue"/>
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:id="@+id/spn_SearchType"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="Tìm kiếm"
                android:id="@+id/btn_Search"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="STT"
                android:layout_weight="1"
                android:lines="2"
                android:textStyle="bold"
                android:maxEms="10"
                android:padding="3dp"
                android:background="@drawable/custom_header_listview"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="2"
                android:maxEms="10"
                android:textStyle="bold"
                android:text="Mã CQLT"
                android:singleLine="false"
                android:padding="3dp"
                android:background="@drawable/custom_header_listview"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:lines="2"
                android:maxEms="10"
                android:textStyle="bold"
                android:text="Tên CQLT"
                android:padding="3dp"
                android:background="@drawable/custom_header_listview"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="2"
                android:maxEms="10"
                android:text="Địa chỉ"
                android:padding="3dp"
                android:textStyle="bold"
                android:background="@drawable/custom_header_listview"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:lines="2"
                android:maxEms="10"
                android:text="Thao tác"
                android:padding="3dp"
                android:textStyle="bold"
                android:background="@drawable/custom_header_listview"
                android:gravity="center"/>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_cqlt"
            android:background="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_button"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        </LinearLayout>

    </LinearLayout>

</ScrollView>